deploy/cpf-cnpj/objects/IntegrationLog__c.object
<CustomObject>
    <description>Log persistente para catches silenciosos de integracoes (SapId, CnpjWs).</description>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <displayFormat>IL-{0000000}</displayFormat>
        <label>Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>

    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <type>Text</type>
        <length>18</length>
    </fields>

    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Text</type>
        <length>40</length>
    </fields>
</CustomObject>